--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ boa_engine = { version = "0.16.0", optional = true }
 base64 = "0.21.0"
 urlencoding = "2.1.2"
 rand = "0.8.5"
+prost = "0.11.9"
+bytes = "1.4.0"
 
 [features]
 default = ["scrape_pages", "innertube"]
